--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.1",
     "chai": "^4.4.1",
+    "dotenv": "^16.4.4",
     "hardhat": "^2.19.4",
     "hardhat-contract-sizer": "^2.10.0"
   },
